Fleshed out the jq post a little and fixed code formatting to only inlcude x scrollbar if needed

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -142,7 +142,7 @@ code {
 
 pre {
     padding: 8px 12px;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     > code {
         border: 0;
